Added date filter to UI (only to provinces page for now).

--- a/webapp/src/main/webapp/css/datatables_bootstrap.css
+++ b/webapp/src/main/webapp/css/datatables_bootstrap.css
@@ -168,3 +168,5 @@ div.DTFC_LeftBodyWrapper tbody tr:first-child td {
 div.DTFC_LeftFootWrapper table {
 	border-top: none;
 }
+
+.dataTables_length {  display: none }
