small improvements to JSP look&feel

--- a/webapp/src/main/webapp/css/ohsc.css
+++ b/webapp/src/main/webapp/css/ohsc.css
@@ -192,3 +192,14 @@ body {
     margin-right: 15px;
     margin-left: 5px;
 }
+
+.reports {
+	float: left;
+	margin-right: 35px;
+}
+
+.form {
+	float: left;
+}
+}
+}
