--- a/webapp/src/main/resources/reports/district_worst.jrxml
+++ b/webapp/src/main/resources/reports/district_worst.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="ProvinceTopBarChart" language="groovy" pageWidth="550" pageHeight="892" whenNoDataType="AllSectionsNoDetail" columnWidth="510" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" whenResourceMissingType="Empty" isIgnorePagination="true">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="DistrictWorstBarChart" language="groovy" pageWidth="550" pageHeight="842" whenNoDataType="AllSectionsNoDetail" columnWidth="510" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" whenResourceMissingType="Empty" isIgnorePagination="true">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
@@ -31,12 +31,15 @@
 			<rightPen lineWidth="0.5" lineColor="#000000"/>
 		</box>
 	</style>
-	<subDataset name="ProvinceTop3">
+	<subDataset name="DistrictAllWorstTop3">
 		<parameter name="cal" class="java.util.Calendar" isForPrompting="false">
 			<defaultValueExpression><![CDATA[Calendar.getInstance()]]></defaultValueExpression>
 		</parameter>
 		<parameter name="end_date" class="java.util.Date">
 			<defaultValueExpression><![CDATA[new Date()]]></defaultValueExpression>
+		</parameter>
+		<parameter name="province_short_name" class="java.lang.String">
+			<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 		</parameter>
 		<parameter name="first_three_month" class="java.util.Date" isForPrompting="false">
 			<defaultValueExpression><![CDATA[(
@@ -48,7 +51,6 @@
 		</parameter>
 		<queryString>
 			<![CDATA[SELECT
-`sub_district_short_name`
 `district_short_name`,
  `Province_Short_Name`,
 round(AVG( case when submission_date BETWEEN $P{first_three_month}  AND $P{end_date}  then `staff_attitude_rating` else 0 end), 2) as staff_attitude_rating,
@@ -64,9 +66,11 @@ waiting_times_rating +
 drug_availability_rating +
 infection_control_rating +
 safe_and_secure_care_rating)/6,2) as Average
+
  FROM `data_mart_rating`
- group by `Province_short_name`
-order by Average Desc
+ WHERE `Province_Short_Name` like $P{province_short_name}
+ group by `district_short_name`
+order by Average ASC
  limit 3;]]>
 		</queryString>
 		<field name="district_short_name" class="java.lang.String"/>
@@ -85,6 +89,9 @@ order by Average Desc
 	<parameter name="end_date" class="java.util.Date">
 		<defaultValueExpression><![CDATA[new Date()]]></defaultValueExpression>
 	</parameter>
+	<parameter name="province_short_name" class="java.lang.String">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
 	<parameter name="first_three_month" class="java.util.Date" isForPrompting="false">
 		<defaultValueExpression><![CDATA[(
     $P{cal}.set($P{end_date}.getYear()+1900, $P{end_date}.getMonth(), $P{end_date}.getDate()) ||
@@ -95,6 +102,7 @@ order by Average Desc
 	</parameter>
 	<queryString>
 		<![CDATA[SELECT
+`district_short_name`,
  `Province_Short_Name`,
 round(AVG( case when submission_date BETWEEN $P{first_three_month}  AND $P{end_date}  then `staff_attitude_rating` else 0 end), 2) as staff_attitude_rating,
 round(AVG( case when submission_date BETWEEN $P{first_three_month}  AND $P{end_date}  then `cleanliness_rating` else 0 end), 2) as cleanliness_rating,
@@ -109,11 +117,14 @@ waiting_times_rating +
 drug_availability_rating +
 infection_control_rating +
 safe_and_secure_care_rating)/6,2) as Average
+
  FROM `data_mart_rating`
- group by `Province_short_name`
-order by Average Desc
+ WHERE `Province_Short_Name` like $P{province_short_name}
+ group by `district_short_name`
+order by Average ASC
  limit 3;]]>
 	</queryString>
+	<field name="district_short_name" class="java.lang.String"/>
 	<field name="Province_Short_Name" class="java.lang.String"/>
 	<field name="staff_attitude_rating" class="java.lang.Double"/>
 	<field name="cleanliness_rating" class="java.lang.Double"/>
@@ -130,12 +141,12 @@ order by Average Desc
 			<staticText>
 				<reportElement style="Subreport_H2" x="0" y="-20" width="509" height="20"/>
 				<textElement/>
-				<text><![CDATA[Best Performing Provinces This Month]]></text>
+				<text><![CDATA[Worst Performing Districts This Month]]></text>
 			</staticText>
 			<barChart>
 				<chart evaluationTime="Report">
 					<reportElement x="0" y="0" width="509" height="100"/>
-					<chartTitle/>
+					<chartTitle position="Top"/>
 					<chartSubtitle/>
 					<chartLegend position="Top">
                         <font size="8" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
@@ -144,37 +155,37 @@ order by Average Desc
 				<categoryDataset>
 					<categorySeries>
 						<seriesExpression><![CDATA["Staff Attitude"]]></seriesExpression>
-						<categoryExpression><![CDATA[$F{Province_Short_Name}]]></categoryExpression>
+						<categoryExpression><![CDATA[$F{district_short_name}]]></categoryExpression>
 						<valueExpression><![CDATA[$F{staff_attitude_rating}]]></valueExpression>
 						<labelExpression><![CDATA["staff Attitude"]]></labelExpression>
 					</categorySeries>
 					<categorySeries>
 						<seriesExpression><![CDATA["Infection Control"]]></seriesExpression>
-						<categoryExpression><![CDATA[$F{Province_Short_Name}]]></categoryExpression>
+						<categoryExpression><![CDATA[$F{district_short_name}]]></categoryExpression>
 						<valueExpression><![CDATA[$F{infection_control_rating}]]></valueExpression>
 						<labelExpression><![CDATA["Infection Control"]]></labelExpression>
 					</categorySeries>
 					<categorySeries>
 						<seriesExpression><![CDATA["Waiting Times"]]></seriesExpression>
-						<categoryExpression><![CDATA[$F{Province_Short_Name}]]></categoryExpression>
+						<categoryExpression><![CDATA[$F{district_short_name}]]></categoryExpression>
 						<valueExpression><![CDATA[$F{waiting_times_rating}]]></valueExpression>
 						<labelExpression><![CDATA["Waiting Times"]]></labelExpression>
 					</categorySeries>
 					<categorySeries>
 						<seriesExpression><![CDATA["Safe And Secure Care"]]></seriesExpression>
-						<categoryExpression><![CDATA[$F{Province_Short_Name}]]></categoryExpression>
+						<categoryExpression><![CDATA[$F{district_short_name}]]></categoryExpression>
 						<valueExpression><![CDATA[$F{safe_and_secure_care_rating}]]></valueExpression>
-						<labelExpression><![CDATA["Safe And Secure Care"]]></labelExpression>
+						<labelExpression><![CDATA["Safe And secure Care"]]></labelExpression>
 					</categorySeries>
 					<categorySeries>
 						<seriesExpression><![CDATA["Cleanliness"]]></seriesExpression>
-						<categoryExpression><![CDATA[$F{Province_Short_Name}]]></categoryExpression>
+						<categoryExpression><![CDATA[$F{district_short_name}]]></categoryExpression>
 						<valueExpression><![CDATA[$F{cleanliness_rating}]]></valueExpression>
 						<labelExpression><![CDATA["Cleanliness"]]></labelExpression>
 					</categorySeries>
 					<categorySeries>
 						<seriesExpression><![CDATA["Drug Availability"]]></seriesExpression>
-						<categoryExpression><![CDATA[$F{Province_Short_Name}]]></categoryExpression>
+						<categoryExpression><![CDATA[$F{district_short_name}]]></categoryExpression>
 						<valueExpression><![CDATA[$F{drug_availability_rating}]]></valueExpression>
 						<labelExpression><![CDATA["Drug Avaiability"]]></labelExpression>
 					</categorySeries>
@@ -182,39 +193,47 @@ order by Average Desc
 				<barPlot>
 					<plot/>
 					<itemLabel/>
+					<categoryAxisFormat>
+						<axisFormat/>
+					</categoryAxisFormat>
+					<valueAxisFormat>
+						<axisFormat/>
+					</valueAxisFormat>
 				</barPlot>
 			</barChart>
 			<componentElement>
-				<reportElement isPrintRepeatedValues="false" x="0" y="100" width="510" height="105" isRemoveLineWhenBlank="true"/>
-				<jr:table xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd">
-					<datasetRun subDataset="ProvinceTop3">
+				<reportElement isPrintRepeatedValues="false" x="0" y="100" width="509" height="105" isRemoveLineWhenBlank="true"/>
+				<jr:table xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd" whenNoDataType="AllSectionsNoDetail">
+					<datasetRun subDataset="DistrictAllWorstTop3">
 						<datasetParameter name="end_date">
 							<datasetParameterExpression><![CDATA[$P{end_date}]]></datasetParameterExpression>
+						</datasetParameter>
+						<datasetParameter name="province_short_name">
+							<datasetParameterExpression><![CDATA[$P{province_short_name}]]></datasetParameterExpression>
 						</datasetParameter>
 						<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
 					</datasetRun>
 					<jr:column width="290">
-						<jr:columnHeader style="Table_CH" height="75" rowSpan="1">
+						<jr:columnHeader style="Table_CH" height="75">
 							<staticText>
 								<reportElement x="0" y="0" width="290" height="75"/>
 								<box leftPadding="2"/>
 								<textElement>
 									<font isBold="true"/>
 								</textElement>
-								<text><![CDATA[Province name]]></text>
+								<text><![CDATA[District name]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="Table_TD" height="15" rowSpan="1">
+						<jr:detailCell style="Table_TD" height="15">
 							<textField>
 								<reportElement x="0" y="0" width="290" height="15"/>
 								<box leftPadding="2"/>
-								<textElement/>
-								<textFieldExpression><![CDATA[$F{Province_Short_Name}]]></textFieldExpression>
+								<textFieldExpression><![CDATA[$F{district_short_name}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
 					<jr:column width="28">
-						<jr:columnHeader style="Table_CH" height="75" rowSpan="1">
+						<jr:columnHeader style="Table_CH" height="75">
 							<staticText>
 								<reportElement x="0" y="0" width="28" height="75"/>
 								<box topPadding="2"/>
@@ -224,17 +243,16 @@ order by Average Desc
 								<text><![CDATA[Staff attitude]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="Table_TD" height="15" rowSpan="1">
+						<jr:detailCell style="Table_TD" height="15">
 							<textField>
 								<reportElement x="0" y="0" width="28" height="15"/>
 								<box leftPadding="2"/>
-								<textElement/>
 								<textFieldExpression><![CDATA[$F{staff_attitude_rating}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
 					<jr:column width="28">
-						<jr:columnHeader style="Table_CH" height="75" rowSpan="1">
+						<jr:columnHeader style="Table_CH" height="75">
 							<staticText>
 								<reportElement x="0" y="0" width="28" height="75"/>
 								<box topPadding="2"/>
@@ -244,17 +262,16 @@ order by Average Desc
 								<text><![CDATA[Cleanliness]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="Table_TD" height="15" rowSpan="1">
+						<jr:detailCell style="Table_TD" height="15">
 							<textField>
 								<reportElement x="0" y="0" width="28" height="15"/>
 								<box leftPadding="2"/>
-								<textElement/>
 								<textFieldExpression><![CDATA[$F{cleanliness_rating}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
 					<jr:column width="28">
-						<jr:columnHeader style="Table_CH" height="75" rowSpan="1">
+						<jr:columnHeader style="Table_CH" height="75">
 							<staticText>
 								<reportElement x="0" y="0" width="28" height="75"/>
 								<box topPadding="2"/>
@@ -264,17 +281,16 @@ order by Average Desc
 								<text><![CDATA[Waiting times]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="Table_TD" height="15" rowSpan="1">
+						<jr:detailCell style="Table_TD" height="15">
 							<textField>
 								<reportElement x="0" y="0" width="28" height="15"/>
 								<box leftPadding="2"/>
-								<textElement/>
 								<textFieldExpression><![CDATA[$F{waiting_times_rating}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
 					<jr:column width="28">
-						<jr:columnHeader style="Table_CH" height="75" rowSpan="1">
+						<jr:columnHeader style="Table_CH" height="75">
 							<staticText>
 								<reportElement x="0" y="0" width="28" height="75"/>
 								<box topPadding="2"/>
@@ -284,17 +300,16 @@ order by Average Desc
 								<text><![CDATA[Drug availability]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="Table_TD" height="15" rowSpan="1">
+						<jr:detailCell style="Table_TD" height="15">
 							<textField>
 								<reportElement x="0" y="0" width="28" height="15"/>
 								<box leftPadding="2"/>
-								<textElement/>
 								<textFieldExpression><![CDATA[$F{drug_availability_rating}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
 					<jr:column width="28">
-						<jr:columnHeader style="Table_CH" height="75" rowSpan="1">
+						<jr:columnHeader style="Table_CH" height="75">
 							<staticText>
 								<reportElement x="0" y="0" width="28" height="75"/>
 								<box topPadding="2"/>
@@ -304,17 +319,16 @@ order by Average Desc
 								<text><![CDATA[Infection control]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="Table_TD" height="15" rowSpan="1">
+						<jr:detailCell style="Table_TD" height="15">
 							<textField>
 								<reportElement x="0" y="0" width="28" height="15"/>
 								<box leftPadding="2"/>
-								<textElement/>
 								<textFieldExpression><![CDATA[$F{infection_control_rating}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
 					<jr:column width="28">
-						<jr:columnHeader style="Table_CH" height="75" rowSpan="1">
+						<jr:columnHeader style="Table_CH" height="75">
 							<staticText>
 								<reportElement x="0" y="0" width="28" height="75"/>
 								<box topPadding="2"/>
@@ -324,19 +338,18 @@ order by Average Desc
 								<text><![CDATA[Safe and secure care]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="Table_TD" height="15" rowSpan="1">
+						<jr:detailCell style="Table_TD" height="15">
 							<textField>
 								<reportElement x="0" y="0" width="28" height="15"/>
 								<box leftPadding="2"/>
-								<textElement/>
 								<textFieldExpression><![CDATA[$F{safe_and_secure_care_rating}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
-					<jr:column width="48">
-						<jr:columnHeader style="Table_CH" height="75" rowSpan="1">
+					<jr:column width="50">
+						<jr:columnHeader style="Table_CH" height="75">
 							<staticText>
-								<reportElement x="0" y="0" width="48" height="75"/>
+								<reportElement x="0" y="0" width="50" height="75"/>
 								<box leftPadding="2"/>
 								<textElement rotation="Right">
 									<font isBold="true"/>
@@ -344,9 +357,9 @@ order by Average Desc
 								<text><![CDATA[Average]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="Table_TD" height="15" rowSpan="1">
+						<jr:detailCell style="Table_TD" height="15">
 							<textField>
-								<reportElement x="0" y="0" width="48" height="15"/>
+								<reportElement x="0" y="0" width="50" height="15"/>
 								<box leftPadding="2"/>
 								<textElement>
 									<font isBold="true"/>
@@ -359,7 +372,4 @@ order by Average Desc
 			</componentElement>
 		</band>
 	</columnHeader>
-	<detail>
-		<band/>
-	</detail>
 </jasperReport>
