--- a/webapp/src/main/resources/reports/facility_full_report.jrxml
+++ b/webapp/src/main/resources/reports/facility_full_report.jrxml
@@ -1,22 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="FacilityFullReport" language="groovy" pageWidth="595" pageHeight="842" whenNoDataType="AllSectionsNoDetail" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" isIgnorePagination="true" uuid="b6ac19b7-e7f8-46b0-b2dc-b06094312abd">
-	<property name="com.jaspersoft.studio.unit." value="pixel"/>
-	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="OHSCCell"/>
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="FacilityFullReport" language="groovy" pageWidth="595" pageHeight="842" whenNoDataType="AllSectionsNoDetail" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" isIgnorePagination="true">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
+	<template><![CDATA[$P{SUBREPORT_DIR} + "report_style_template.jrtx"]]></template>
+	<parameter name="SUBREPORT_DIR" class="java.lang.String" isForPrompting="false">
+		<defaultValueExpression><![CDATA[""]]></defaultValueExpression>
+	</parameter>
 	<parameter name="cal" class="java.util.Calendar" isForPrompting="false">
 		<defaultValueExpression><![CDATA[Calendar.getInstance()]]></defaultValueExpression>
 	</parameter>
-	<parameter name="end_date" class="java.util.Date"/>
-	<parameter name="dist_short_name" class="java.lang.String"/>
-	<parameter name="first_of_this_month" class="java.util.Date">
-		<defaultValueExpression><![CDATA[(
-    $P{cal}.set($P{end_date}.getYear()+1900, $P{end_date}.getMonth(), $P{end_date}.getDate()) ||
-    $P{cal}.add(Calendar.MONTH, -0) ||
-    $P{cal}.set(Calendar.DAY_OF_MONTH, 1)
-)
-? null : $P{cal}.getTime()]]></defaultValueExpression>
+	<parameter name="end_date" class="java.util.Date">
+		<defaultValueExpression><![CDATA[new Date()]]></defaultValueExpression>
+	</parameter>
+	<parameter name="dist_short_name" class="java.lang.String">
+		<defaultValueExpression><![CDATA["%"]]></defaultValueExpression>
+	</parameter>
+	<parameter name="province_short_name" class="java.lang.String">
+		<defaultValueExpression><![CDATA["%"]]></defaultValueExpression>
+	</parameter>
+	<parameter name="year" class="java.lang.String" isForPrompting="false">
+		<defaultValueExpression><![CDATA[$P{end_date}.getYear()+1900]]></defaultValueExpression>
 	</parameter>
 	<parameter name="month_name" class="java.lang.String" isForPrompting="false">
 		<defaultValueExpression><![CDATA[$P{end_date}.getMonth() == 0 ?    "January" :
@@ -33,7 +37,6 @@ $P{end_date}.getMonth() == 10 ?    "November"  :
 $P{end_date}.getMonth() == 11 ?    "December" :
 "Unknown"]]></defaultValueExpression>
 	</parameter>
-	<parameter name="province_short_name" class="java.lang.String"/>
 	<queryString language="SQL">
 		<![CDATA[select now()]]>
 	</queryString>
@@ -42,135 +45,107 @@ $P{end_date}.getMonth() == 11 ?    "December" :
 		<band splitType="Stretch"/>
 	</background>
 	<pageHeader>
-		<band height="55">
-			<subreport>
-				<reportElement x="0" y="0" width="555" height="50" uuid="aaabfe66-7a55-4561-86e8-776675e6e820"/>
-				<subreportParameter name="first_of_this_month">
-					<subreportParameterExpression><![CDATA[$P{first_of_this_month}]]></subreportParameterExpression>
-				</subreportParameter>
-				<subreportParameter name="end_date">
-					<subreportParameterExpression><![CDATA[$P{end_date}]]></subreportParameterExpression>
-				</subreportParameter>
-				<subreportParameter name="dist_short_name">
-					<subreportParameterExpression><![CDATA[$P{dist_short_name}]]></subreportParameterExpression>
-				</subreportParameter>
-				<subreportParameter name="province_short_name">
-					<subreportParameterExpression><![CDATA[$P{province_short_name}]]></subreportParameterExpression>
-				</subreportParameter>
-				<subreportParameter name="month_name">
-					<subreportParameterExpression><![CDATA[$P{month_name}]]></subreportParameterExpression>
-				</subreportParameter>
-				<subreportParameter name="cal">
-					<subreportParameterExpression><![CDATA[$P{cal}]]></subreportParameterExpression>
-				</subreportParameter>
-				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
-				<subreportExpression><![CDATA["facility_report.jasper"]]></subreportExpression>
-			</subreport>
+		<band height="73" splitType="Stretch">
+			<image>
+				<reportElement x="17" y="0" width="211" height="50"/>
+				<imageExpression><![CDATA[$P{SUBREPORT_DIR} + "rateMyClinic-logo-clearback.png"]]></imageExpression>
+			</image>
+			<staticText>
+				<reportElement x="241" y="7" width="280" height="31"/>
+				<textElement>
+					<font size="18" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Facility level statistics]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="241" y="27" width="280" height="23"/>
+				<textElement>
+					<font size="12" isBold="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{month_name} + " " +  $P{year}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="241" y="46" width="280" height="12"/>
+				<textElement textAlignment="Left">
+					<font size="10" isBold="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA["Province: \t" + ($P{province_short_name}.equals("%")? "All" : $P{province_short_name})]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="241" y="58" width="280" height="12"/>
+				<textElement>
+					<font size="10" isBold="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA["District: \t" + ($P{dist_short_name}.equals("%")? "All" : $P{dist_short_name})]]></textFieldExpression>
+			</textField>
 		</band>
 	</pageHeader>
 	<detail>
 		<band height="258" splitType="Prevent">
-			<property name="local_mesure_unitheight" value="pixel"/>
-			<property name="com.jaspersoft.studio.unit.height" value="px"/>
-			<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.FreeLayout"/>
 			<subreport>
-				<reportElement stretchType="RelativeToTallestObject" x="0" y="0" width="780" height="258" uuid="4f0dc6f5-3e76-4745-97b0-1839b17a440b">
-					<property name="local_mesure_unitx" value="pixel"/>
-				</reportElement>
-				<subreportParameter name="dist_short_name">
-					<subreportParameterExpression><![CDATA[$P{dist_short_name}]]></subreportParameterExpression>
-				</subreportParameter>
+				<reportElement stretchType="RelativeToTallestObject" x="0" y="0" width="555" height="258"/>
 				<subreportParameter name="end_date">
 					<subreportParameterExpression><![CDATA[$P{end_date}]]></subreportParameterExpression>
 				</subreportParameter>
-				<subreportParameter name="first_of_this_month">
-					<subreportParameterExpression><![CDATA[$P{first_of_this_month}]]></subreportParameterExpression>
-				</subreportParameter>
-				<subreportParameter name="month_name">
-					<subreportParameterExpression><![CDATA[$P{month_name}]]></subreportParameterExpression>
+				<subreportParameter name="dist_short_name">
+					<subreportParameterExpression><![CDATA[$P{dist_short_name}]]></subreportParameterExpression>
 				</subreportParameter>
 				<subreportParameter name="province_short_name">
 					<subreportParameterExpression><![CDATA[$P{province_short_name}]]></subreportParameterExpression>
 				</subreportParameter>
-				<subreportParameter name="cal">
-					<subreportParameterExpression><![CDATA[$P{cal}]]></subreportParameterExpression>
-				</subreportParameter>
 				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
-				<subreportExpression><![CDATA["facility_level_barchart.jasper"]]></subreportExpression>
+				<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "facility_level_barchart.jasper"]]></subreportExpression>
 			</subreport>
 		</band>
 		<band height="202" splitType="Prevent">
-			<property name="local_mesure_unitheight" value="pixel"/>
-			<property name="com.jaspersoft.studio.unit.height" value="px"/>
 			<subreport>
-				<reportElement x="0" y="0" width="780" height="200" uuid="72e89262-d169-48c9-aa61-004a3f973702"/>
-				<subreportParameter name="dist_short_name">
-					<subreportParameterExpression><![CDATA[$P{dist_short_name}]]></subreportParameterExpression>
-				</subreportParameter>
+				<reportElement x="0" y="0" width="555" height="200"/>
 				<subreportParameter name="end_date">
 					<subreportParameterExpression><![CDATA[$P{end_date}]]></subreportParameterExpression>
 				</subreportParameter>
-				<subreportParameter name="first_of_this_month">
-					<subreportParameterExpression><![CDATA[$P{first_of_this_month}]]></subreportParameterExpression>
-				</subreportParameter>
-				<subreportParameter name="month_name">
-					<subreportParameterExpression><![CDATA[$P{month_name}]]></subreportParameterExpression>
+				<subreportParameter name="dist_short_name">
+					<subreportParameterExpression><![CDATA[$P{dist_short_name}]]></subreportParameterExpression>
 				</subreportParameter>
 				<subreportParameter name="province_short_name">
 					<subreportParameterExpression><![CDATA[$P{province_short_name}]]></subreportParameterExpression>
 				</subreportParameter>
-				<subreportParameter name="cal">
-					<subreportParameterExpression><![CDATA[$P{cal}]]></subreportParameterExpression>
-				</subreportParameter>
 				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
-				<subreportExpression><![CDATA["facility_top_ten.jasper"]]></subreportExpression>
+				<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "facility_top_ten.jasper"]]></subreportExpression>
 			</subreport>
 		</band>
 		<band height="202">
-			<property name="local_mesure_unitheight" value="pixel"/>
-			<property name="com.jaspersoft.studio.unit.height" value="px"/>
 			<subreport>
-				<reportElement x="0" y="0" width="780" height="202" uuid="a13a9575-e265-4507-894d-c083e6f191ba">
-					<property name="local_mesure_unitheight" value="pixel"/>
-					<property name="com.jaspersoft.studio.unit.height" value="px"/>
-				</reportElement>
-				<subreportParameter name="dist_short_name">
-					<subreportParameterExpression><![CDATA[$P{dist_short_name}]]></subreportParameterExpression>
-				</subreportParameter>
+				<reportElement x="0" y="0" width="555" height="202"/>
 				<subreportParameter name="end_date">
 					<subreportParameterExpression><![CDATA[$P{end_date}]]></subreportParameterExpression>
 				</subreportParameter>
-				<subreportParameter name="first_of_this_month">
-					<subreportParameterExpression><![CDATA[$P{first_of_this_month}]]></subreportParameterExpression>
-				</subreportParameter>
-				<subreportParameter name="month_name">
-					<subreportParameterExpression><![CDATA[$P{month_name}]]></subreportParameterExpression>
+				<subreportParameter name="dist_short_name">
+					<subreportParameterExpression><![CDATA[$P{dist_short_name}]]></subreportParameterExpression>
 				</subreportParameter>
 				<subreportParameter name="province_short_name">
 					<subreportParameterExpression><![CDATA[$P{province_short_name}]]></subreportParameterExpression>
 				</subreportParameter>
-				<subreportParameter name="cal">
-					<subreportParameterExpression><![CDATA[$P{cal}]]></subreportParameterExpression>
-				</subreportParameter>
 				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
-				<subreportExpression><![CDATA["facility_bottom_ten.jasper"]]></subreportExpression>
+				<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "facility_bottom_ten.jasper"]]></subreportExpression>
 			</subreport>
 		</band>
 	</detail>
 	<pageFooter>
-		<band height="96" splitType="Stretch">
+		<band height="53" splitType="Stretch">
+			<image>
+				<reportElement x="17" y="12" width="100" height="40"/>
+				<imageExpression><![CDATA[$P{SUBREPORT_DIR} + "NDoH logo.jpg"]]></imageExpression>
+			</image>
 			<textField>
-				<reportElement x="458" y="50" width="50" height="30" uuid="bb3d4c6f-cfd4-45ad-ad27-667df43d2958"/>
+				<reportElement x="459" y="35" width="50" height="12"/>
+				<textElement textAlignment="Right"/>
 				<textFieldExpression><![CDATA["Page " + String.valueOf($V{PAGE_NUMBER}) + " of"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement x="508" y="50" width="46" height="30" uuid="c64c6734-8c2c-4c04-94a0-a13d493874a7"/>
+				<reportElement x="509" y="35" width="46" height="12"/>
+				<textElement/>
 				<textFieldExpression><![CDATA[" " + String.valueOf($V{PAGE_NUMBER})]]></textFieldExpression>
 			</textField>
-			<image>
-				<reportElement x="0" y="40" width="100" height="40" uuid="112b5d64-eb3d-4cab-859c-fdb6e037600f"/>
-				<imageExpression><![CDATA["/home/chantell/workspace/RemoteSystemsTempFiles/NDoH logo.jpg"]]></imageExpression>
-			</image>
 		</band>
 	</pageFooter>
 	<noData>
