--- a/webapp/src/main/resources/reports/provinces_full_report.jrxml
+++ b/webapp/src/main/resources/reports/provinces_full_report.jrxml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="provinces_full_report" language="groovy" pageWidth="595" pageHeight="842" whenNoDataType="AllSectionsNoDetail" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="21ec0125-ef47-496e-9de8-61c804eb1d8d">
-	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="OHSCCell"/>
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="provinces_full_report" language="groovy" pageWidth="595" pageHeight="842" whenNoDataType="AllSectionsNoDetail" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" isIgnorePagination="true">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="261"/>
+	<property name="ireport.y" value="0"/>
+	<template><![CDATA[$P{SUBREPORT_DIR} + "report_style_template.jrtx"]]></template>
 	<parameter name="SUBREPORT_DIR" class="java.lang.String" isForPrompting="false">
-		<defaultValueExpression><![CDATA["/home/chantell/workspace/RemoteSystemsTempFiles/"]]></defaultValueExpression>
+		<defaultValueExpression><![CDATA[""]]></defaultValueExpression>
 	</parameter>
 	<parameter name="cal" class="java.util.Calendar" isForPrompting="false">
 		<defaultValueExpression><![CDATA[Calendar.getInstance()]]></defaultValueExpression>
@@ -13,119 +13,97 @@
 	<parameter name="end_date" class="java.util.Date">
 		<defaultValueExpression><![CDATA[new Date()]]></defaultValueExpression>
 	</parameter>
-	<parameter name="first_first_month" class="java.util.Date" isForPrompting="false">
-		<defaultValueExpression><![CDATA[(
-    $P{cal}.set($P{end_date}.getYear()+1900, $P{end_date}.getMonth(), $P{end_date}.getDate()) ||
-    $P{cal}.add(Calendar.MONTH, -1) ||
-    $P{cal}.set(Calendar.DAY_OF_MONTH, 1)
-)
-? null : $P{cal}.getTime()]]></defaultValueExpression>
+	<parameter name="year" class="java.lang.String" isForPrompting="false">
+		<defaultValueExpression><![CDATA[$P{end_date}.getYear()+1900]]></defaultValueExpression>
 	</parameter>
-	<parameter name="first_second_month" class="java.util.Date" isForPrompting="false">
-		<defaultValueExpression><![CDATA[(
-    $P{cal}.set($P{end_date}.getYear()+1900, $P{end_date}.getMonth(), $P{end_date}.getDate()) ||
-    $P{cal}.add(Calendar.MONTH, -2) ||
-    $P{cal}.set(Calendar.DAY_OF_MONTH, 1)
-)
-? null : $P{cal}.getTime()]]></defaultValueExpression>
-	</parameter>
-	<parameter name="first_three_month" class="java.util.Date" isForPrompting="false">
-		<defaultValueExpression><![CDATA[(
-    $P{cal}.set($P{end_date}.getYear()+1900, $P{end_date}.getMonth(), $P{end_date}.getDate()) ||
-    $P{cal}.add(Calendar.MONTH, -3) ||
-    $P{cal}.set(Calendar.DAY_OF_MONTH, 1)
-)
-? null : $P{cal}.getTime()]]></defaultValueExpression>
+	<parameter name="month_name" class="java.lang.String" isForPrompting="false">
+		<defaultValueExpression><![CDATA[$P{end_date}.getMonth() == 0 ?    "January" :
+$P{end_date}.getMonth() == 1 ?    "February" :
+$P{end_date}.getMonth() == 2 ?    "March" :
+$P{end_date}.getMonth() == 3 ?    "April" :
+$P{end_date}.getMonth() == 4 ?    "May" :
+$P{end_date}.getMonth() == 5 ?    "June" :
+$P{end_date}.getMonth() == 6 ?    "July" :
+$P{end_date}.getMonth() == 7 ?    "August" :
+$P{end_date}.getMonth() == 8 ?    "September" :
+$P{end_date}.getMonth() == 9 ?    "October"  :
+$P{end_date}.getMonth() == 10 ?    "November"  :
+$P{end_date}.getMonth() == 11 ?    "December" :
+"Unknown"]]></defaultValueExpression>
 	</parameter>
 	<queryString>
 		<![CDATA[Select now()]]>
 	</queryString>
 	<pageHeader>
-		<band height="69" splitType="Stretch">
-			<subreport>
-				<reportElement x="0" y="0" width="554" height="69" uuid="7b46306f-9479-46ca-998b-4c9902b5b13f"/>
-				<subreportParameter name="first_three_month">
-					<subreportParameterExpression><![CDATA[$P{first_three_month}]]></subreportParameterExpression>
-				</subreportParameter>
-				<subreportParameter name="end_date">
-					<subreportParameterExpression><![CDATA[$P{end_date}]]></subreportParameterExpression>
-				</subreportParameter>
-				<subreportParameter name="cal">
-					<subreportParameterExpression><![CDATA[$P{cal}]]></subreportParameterExpression>
-				</subreportParameter>
-				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
-				<subreportExpression><![CDATA["provinces_report.jasper"]]></subreportExpression>
-			</subreport>
+		<band height="50" splitType="Stretch">
+			<image>
+				<reportElement x="17" y="0" width="211" height="50"/>
+				<imageExpression><![CDATA[$P{SUBREPORT_DIR} + "rateMyClinic-logo-clearback.png"]]></imageExpression>
+			</image>
+			<staticText>
+				<reportElement x="241" y="7" width="280" height="31"/>
+				<textElement>
+					<font size="18" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Provincial level statistics]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="241" y="27" width="280" height="23"/>
+				<textElement>
+					<font size="12" isBold="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{month_name} + " " +  $P{year}]]></textFieldExpression>
+			</textField>
 		</band>
 	</pageHeader>
 	<detail>
-		<band height="200" splitType="Prevent">
-			<subreport>
-				<reportElement x="0" y="0" width="554" height="200" uuid="02e81d03-9cc3-4887-b51d-cef5c1ab8228"/>
+		<band height="155" splitType="Stretch">
+			<subreport runToBottom="false">
+				<reportElement x="0" y="0" width="555" height="155"/>
 				<subreportParameter name="end_date">
 					<subreportParameterExpression><![CDATA[$P{end_date}]]></subreportParameterExpression>
-				</subreportParameter>
-				<subreportParameter name="FirstFirstMonth">
-					<subreportParameterExpression><![CDATA[$P{first_first_month}]]></subreportParameterExpression>
-				</subreportParameter>
-				<subreportParameter name="FirstSecondMonth">
-					<subreportParameterExpression><![CDATA[$P{first_second_month}]]></subreportParameterExpression>
-				</subreportParameter>
-				<subreportParameter name="FirstThreeMonth">
-					<subreportParameterExpression><![CDATA[$P{first_three_month}]]></subreportParameterExpression>
-				</subreportParameter>
-				<subreportParameter name="cal">
-					<subreportParameterExpression><![CDATA[$P{cal}]]></subreportParameterExpression>
 				</subreportParameter>
 				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
 				<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "province_three_month_barchart.jasper"]]></subreportExpression>
 			</subreport>
 		</band>
-		<band height="259" splitType="Stretch">
-			<subreport>
-				<reportElement x="0" y="0" width="554" height="259" uuid="551bdeee-3752-4db8-a1b6-90d61e9aebd2"/>
-				<subreportParameter name="cal">
-					<subreportParameterExpression><![CDATA[$P{cal}]]></subreportParameterExpression>
-				</subreportParameter>
+		<band height="205" splitType="Stretch">
+			<subreport runToBottom="false">
+				<reportElement x="0" y="0" width="555" height="205"/>
 				<subreportParameter name="end_date">
 					<subreportParameterExpression><![CDATA[$P{end_date}]]></subreportParameterExpression>
 				</subreportParameter>
-				<subreportParameter name="FirstFirstMonth">
-					<subreportParameterExpression><![CDATA[$P{first_first_month}]]></subreportParameterExpression>
-				</subreportParameter>
-				<subreportParameter name="FirstSecondMonth">
-					<subreportParameterExpression><![CDATA[$P{first_second_month}]]></subreportParameterExpression>
-				</subreportParameter>
-				<subreportParameter name="FirstThreeMonth">
-					<subreportParameterExpression><![CDATA[$P{first_three_month}]]></subreportParameterExpression>
-				</subreportParameter>
-				<subreportParameter name="month_name"/>
-				<subreportParameter name="Province_Short_Name"/>
 				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
 				<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "province_top.jasper"]]></subreportExpression>
 			</subreport>
 		</band>
-		<band height="202" splitType="Prevent">
-			<subreport>
-				<reportElement x="-6" y="0" width="560" height="200" uuid="072adac3-86ba-4970-844d-178f09fe78d0"/>
-				<subreportParameter name="cal">
-					<subreportParameterExpression><![CDATA[$P{cal}]]></subreportParameterExpression>
-				</subreportParameter>
+		<band height="205" splitType="Stretch">
+			<subreport runToBottom="true">
+				<reportElement x="0" y="0" width="555" height="205"/>
 				<subreportParameter name="end_date">
 					<subreportParameterExpression><![CDATA[$P{end_date}]]></subreportParameterExpression>
-				</subreportParameter>
-				<subreportParameter name="FirstFirstMonth">
-					<subreportParameterExpression><![CDATA[$P{first_first_month}]]></subreportParameterExpression>
-				</subreportParameter>
-				<subreportParameter name="FirstSecondMonth">
-					<subreportParameterExpression><![CDATA[$P{first_second_month}]]></subreportParameterExpression>
-				</subreportParameter>
-				<subreportParameter name="FirstThreeMonth">
-					<subreportParameterExpression><![CDATA[$P{first_three_month}]]></subreportParameterExpression>
 				</subreportParameter>
 				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
 				<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "province_worst.jasper"]]></subreportExpression>
 			</subreport>
 		</band>
 	</detail>
+	<pageFooter>
+		<band height="41" splitType="Stretch">
+			<image>
+				<reportElement x="17" y="1" width="100" height="40"/>
+				<imageExpression><![CDATA[$P{SUBREPORT_DIR} + "NDoH logo.jpg"]]></imageExpression>
+			</image>
+			<textField>
+				<reportElement x="459" y="24" width="50" height="12"/>
+				<textElement textAlignment="Right"/>
+				<textFieldExpression><![CDATA["Page " + String.valueOf($V{PAGE_NUMBER}) + " of"]]></textFieldExpression>
+			</textField>
+			<textField evaluationTime="Report">
+				<reportElement x="509" y="24" width="46" height="12"/>
+				<textElement/>
+				<textFieldExpression><![CDATA[" " + String.valueOf($V{PAGE_NUMBER})]]></textFieldExpression>
+			</textField>
+		</band>
+	</pageFooter>
 </jasperReport>
