--- a/webapp/src/main/resources/reports/province_worst.jrxml
+++ b/webapp/src/main/resources/reports/province_worst.jrxml
@@ -131,7 +131,9 @@ order by Average ASC
 			</staticText>
 			<barChart>
 				<chart evaluationTime="Report">
-					<reportElement x="0" y="0" width="509" height="100"/>
+					<reportElement x="0" y="0" width="509" height="100">
+						<property name="net.sf.jasperreports.chart.range.axis.tick.interval" value="1"/>
+					</reportElement>
 					<chartTitle/>
 					<chartSubtitle/>
 					<chartLegend position="Top">
@@ -179,6 +181,8 @@ order by Average ASC
 				<barPlot>
 					<plot/>
 					<itemLabel/>
+					<rangeAxisMinValueExpression>0</rangeAxisMinValueExpression>
+                    <rangeAxisMaxValueExpression>4</rangeAxisMaxValueExpression>
 				</barPlot>
 			</barChart>
 			<componentElement>
